--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>rome</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.18.3</version>
+        </dependency>
     </dependencies>
 </project>
