--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>newssearch</groupId>
-    <artifactId>rss</artifactId>
+    <artifactId>newsFeeder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,14 +14,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>rome</groupId>
-            <artifactId>rome</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.18.3</version>
         </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-sync</artifactId>
+        <version>4.10.2</version>
+    </dependency>
     </dependencies>
 </project>
