Засунул классы ConfigManager, GptFilterService и NewsCombinerToCommonFile, пока вызываются в Main как статические методы

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,20 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.11</version>
         </dependency>
+
+        <!-- HTTP клиент (для запросов к OpenRouter API) -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
+
+        <!-- JSON обработка -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
     </dependencies>
 </project>
