--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,16 @@
             <version>20231013</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
     </dependencies>
 </project>
