--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,26 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+
+
+
+
     <dependencies>
 
         <dependency>
